# yolov8_predict

./: CMakeLists.txt  README.md
include/: camera.h  predictor.h
src/: camera.cpp  main.cpp  predictor.cpp  utils.cpp
